--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.0.4",
+    "slugify": "^1.6.6"
   }
 }
